--- a/AdMon/AndroidManifest.xml
+++ b/AdMon/AndroidManifest.xml
@@ -7,8 +7,10 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="14" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +19,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.ravimd.admon.EnterIDActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/CustomTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +29,16 @@
         </activity>
         <activity
             android:name="com.ravimd.admon.DetailsActivity"
-            android:label="@string/title_activity_details" >
+            android:label="@string/title_activity_details"
+            android:theme="@style/CustomTheme" >
+        </activity>
+
+        <service android:name="com.ravimd.admon.AlarmService_Service" >
+        </service>
+
+        <activity
+            android:name="com.ravimd.admon.PicsActivity"
+            android:label="@string/title_activity_pics" >
         </activity>
     </application>
 
