--- a/code-processor/.classpath
+++ b/code-processor/.classpath
@@ -65,4 +65,19 @@
       <attribute value="jar:file:/Users/ravi/.m2/repository/com/google/zxing/javase/2.2/javase-2.2-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.0.4/jackson-core-2.0.4.jar" sourcepath="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.0.4/jackson-core-2.0.4-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/ravi/.m2/repository/com/fasterxml/jackson/core/jackson-core/2.0.4/jackson-core-2.0.4-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-databind/2.0.4/jackson-databind-2.0.4.jar" sourcepath="M2_REPO/com/fasterxml/jackson/core/jackson-databind/2.0.4/jackson-databind-2.0.4-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/ravi/.m2/repository/com/fasterxml/jackson/core/jackson-databind/2.0.4/jackson-databind-2.0.4-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-annotations/2.0.4/jackson-annotations-2.0.4.jar" sourcepath="M2_REPO/com/fasterxml/jackson/core/jackson-annotations/2.0.4/jackson-annotations-2.0.4-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/ravi/.m2/repository/com/fasterxml/jackson/core/jackson-annotations/2.0.4/jackson-annotations-2.0.4-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
 </classpath>
