--- a/code-processor/pom.xml
+++ b/code-processor/pom.xml
@@ -88,6 +88,16 @@
       <artifactId>javase</artifactId>
       <version>2.2</version>
     </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.0.4</version>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.0.4</version>
+    </dependency>
   </dependencies>
 
 	<repositories>
